--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&family=Poppins:wght@300&display=swap');
+
 body{
     margin: 0;
     box-sizing: border-box;
@@ -14,7 +16,7 @@ body{
 }
 .menu_navegacao > h1{
     margin-left: 50px;
-    
+    font-size: 155%;
 }
 .lista_navegacao{
     display: flex;
@@ -23,10 +25,13 @@ body{
     align-items: center;
     list-style: none;
     margin-right: 5%;
+   
 }
 .lista_navegacao > li > a{
     text-decoration: none;
     color: #828282;
+    font-weight: 600px;
+    font-family: 'Inter', sans-serif;
 }
 .lista_navegacao > li > a:hover{
     text-decoration: none;
@@ -48,7 +53,6 @@ body{
     border: 2px solid #F5F5F5;
     margin-top: 20px;
     margin-left: 30px;
-    
 }
 .card_produto >.div_imagem{
     background-color: #F5F5F5;
@@ -64,17 +68,27 @@ body{
 }
 .div_texto>a{
     margin-top: 10%;
-    color:#828282
+    color:#828282;
+    
 }
 .div_texto>.categoria{
-    background-color: #2E245E;
-    ;
+    background-color: #2E245E;;
     color: white;
     width: 30%;
     height: 4vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.card_descricao{
+    color: #828282;
+    font-family: "Inter";
+    font-size: 12px;
+}
+.card_price{
+    font-family: "Inter";
+    font-size: 14px;
+    margin-top: 15px;
 }
 .carrinho_compras{
     width: 90%;
@@ -85,6 +99,7 @@ body{
     align-items: center;
     justify-content: center;
     font-size: 115%;
+    overflow: scroll;
 }
 .title{
     background-color: #6B54DE;
@@ -106,11 +121,9 @@ main{
 .menu_lateral{
     position: fixed;
     width: 25%;
-    
     margin-top: 13vh;
     margin-left: 77%;
 }
-
 .pesquisa>input{
     width: 70%;
     height: 6vh;    
@@ -126,4 +139,35 @@ main{
     background-color: #6B54DE;
     color:white;
 }
+.preco_total{
+    width: 100%;
+    height: 15vh;
+    background-color: #333333;
+    color: #f5f5f5;
+    font-family: "Inter";
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding-left: 20px;
+}
+.produto_carrinho{
+    display: flex;
+    font-size: 70%;
+    margin-top: 30px;
+}
+.produto_carrinho>.div_img{
+    width: 35%;
+    height: 14vh;
+    background-color: white;
+    margin-left: 10px;
+}
+.div_img>img{
+    width: 100%;
 
+}
+.produto_carrinho>.descricao{
+    margin-left: 15px;    
+
+}
